[tool.poetry]
name = "ood_project"
version = "0.1.0"
description = ""
authors = ["Michael Lebacher <michael.lebacher@gmx.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.*"
pandas = "^1.3.5"
shap = "^0.40.0"
matplotlib = "^3.5.1"
torch = "1.10.2"
opencv-python = "^4.5.5"
torchvision = "0.11.3"
ipykernel = "^6.18.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
